--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ find_package(catkin REQUIRED COMPONENTS
 	rospy
 	std_msgs
 	nav_msgs
+        sensor_msgs
+        cv_bridge
+        image_transport
 )
 
 ## System dependencies are found with CMake's conventions
